# ai-agent-marketplace-orchestrator

./: .env.backup  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  celery_app.py  config.env  config.py  database.py  docker-compose.yml  llm_workflow.py  main.py  my_tree_structure.txt  pyproject.toml  requirements.txt  sandbox_manager.py  start.ps1  start.py  tasks.py  test_orchestrator.py  vector_store.py
.github/workflows/: ci.yml
infrastructure/docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
infrastructure/kubernetes/: deployment.yaml  namespace.yaml
infrastructure/monitoring/prometheus/: alert-rules.yml  prometheus.yml
migrations/versions/: alembic.ini
scripts/: cleanup.py  migrate.sh  performance_test.py  seed_data.py  setup.sh
src/orchastrator/: main.py
src/orchastrator/api/: monitoring.py
src/orchastrator/api/v1/: agents.py  orchestration.py  router.py  subtasks.py
src/orchastrator/config/: settings.py
src/orchastrator/models/: database.py  schemas.py
src/orchastrator/services/: monitoring_service.py  sandbox_manager.py  vector_store.py
src/orchastrator/utils/: exceptions.py  logger.py
src/orchastrator/workers/: celery_app.py  tasks.py
tests/: conftest.py
