[project]
name = "fastapi, celery, redis, sqlalchemy, alembic, httpx, python-multipart"
version = "0.1.0"
description = ""
authors = [
    {name = "Douglas Owiye",email = "22635633+OwiyeD@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
